# Imagery-app-service

./: .env.example  .gitignore  Dockerfile  Dockerfile.gpu  Dockerfile.worker  GUARDRAIL_IMPLEMENTATION.md  README.md  analyze_samples.py  audit_log.json  benchmark_api.py  debug_output.txt  debug_v31.py  docker-compose.yml  fix_model.py  food_guardrail_calibrator.py  food_guardrail_calibrator_v2.py  food_guardrail_calibrator_v3.py  ground_truth.json  prometheus.yml  pyproject.toml  requirements-gpu.txt  requirements.txt  sample_analysis_report.json  test_jit_load.py  test_prompts.py
.agent/workflows/: guardrail-refactor.md
alembic/: env.py
calibration_reports/: report_iter_1.md  report_iter_10.md  report_iter_11.md  report_iter_12.md  report_iter_13.md  report_iter_14.md  report_iter_15.md  report_iter_16.md  report_iter_17.md  report_iter_18.md  report_iter_19.md  report_iter_2.md  report_iter_20.md  report_iter_3.md  report_iter_4.md  report_iter_5.md  report_iter_6.md  report_iter_7.md  report_iter_8.md  report_iter_9.md  v3_calibration_20260116_132240.json  v3_calibration_20260116_132408.json
docs/: ARCHITECTURE.md  SOTA_KITCHEN_OPTIMIZATIONS.md
food-guard-ui/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
sample_images/: 005.avif  006.avif  extract-data-2026-01-14.json  heart-jelly-sweets-surrounding-cookie-platter-marble-surface_114579-75319.avif  misinformation_agent.json  multi.avif  sampleeee.avif  test6.avif
scripts/: setup_models.py
src/: main.py
tests/: conftest.py  test_food_guardrail_v3.py
(+51 files in other folders)
