[tool.poetry]
name = "food-guard-api"
version = "0.1.0"
description = "Food Guard AI with Clean Architecture"
authors = ["Antigravity <antigravity@google.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
aioredis = "^2.0.1"
torch = "^2.1.0"
sentence-transformers = "^2.2.2"
open-clip-torch = "^2.20.0"
pillow = "^10.0.1"
httpx = "^0.25.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"
pytest-mock = "^3.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
